# python-todo-cli

./: .gitignore  CLAUDE.md  README.md  plan.md  pyproject.toml
.claude/agents/: auth-agent.md  clarification-agent.md  todo-agent.md
.claude/skills/: SKILLS.md  phase4-docker-build.skill.md  phase4-troubleshoot.skill.md
.claude/workflows/: phase4-deploy.workflow.md
history/adr/: adr-2026-05-21-deterministic-command-parser.md
history/phr/: phr-2026-05-21-list-todos-default.md  phr-2026-05-21-mcp-tools-fix.md  phr-2026-05-21-update-command.md
history/prompts/: prompt-2026-05-21-phase4-deployment-fixes.txt
phase1-console/: pyproject.toml
phase1-console/src/: __init__.py  (+1 more)
phase2-web/: CLAUDE.md  README.md
phase2-web/backend/: .env.example  CLAUDE.md  README.md  auth.py  db.py  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  test.db  test_signup.py  test_signup_new.py  vercel.json
phase2-web/backend/.claude/: prompt-history.md
phase2-web/backend/api/: index.py
phase2-web/backend/routes/: auth.py  tasks.py
phase2-web/backend/tests/: __init__.py  conftest.py  test_tasks.py
phase3-chatbot/: .env.example  .env.neon.example  .env.production.example  .env.py313  .env.test  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  CONTRIBUTING.md  DASHBOARD_CLARIFICATION.md  DELETE_HISTORY_GUIDE.md  DEPLOYMENT_GUIDE.md  Dockerfile.backend  FINAL_FIX.bat  FINAL_STATUS.md  FIX_PYDANTIC.bat  FRONTEND_COMPLETE.md  FRONTEND_ENHANCEMENT_READY.md  FRONTEND_IMPLEMENTATION_SUMMARY.md  FRONTEND_IMPROVEMENT_PLAN.md  FRONTEND_SIMPLIFIED_PLAN.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  LOGIN_ERROR_ANALYSIS.md  LOGIN_PAGE_IMPLEMENTATION.md  LOGIN_PAGE_IMPROVEMENTS.md  MULTIPROCESSING_ERROR_FIX.md  PHASE7_COMPLETE.md  PHR_ADR_GUIDE.md  PROJECT_COMPLETE.md  PROMPT_HISTORY_GUIDE.md  PYDANTIC_ERROR_ANALYSIS.md  QUICK_FIX.md  README.md  README_START_HERE.md  REAL_SOLUTION.md  SOLUTION.md  START_BACKEND.md  TESTING_COMPLETE.md  USER_GUIDE.md  (+17 more)
phase4-k8/: ARCHITECTURE_VERIFICATION.md  BACKEND_TEST_RESULTS.md  CLAUDE.md  DEPLOYMENT_STATUS.md  END_TO_END_VERIFICATION.md  FRONTEND_TEST_RESULTS.md  HELM_CHART_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INSTALL_TOOLS.md  README.md  TROUBLESHOOTING.md  debug-pod.yaml
src/: exceptions.py
(+321 files in other folders)
