[project]
name = "todo-cli"
version = "0.1.0"
description = "Phase I CLI Todo Application - In-memory task management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
todo = "src.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
