[project]
name = "todo-backend"
version = "0.1.0"
description = "Multi-user Todo API backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi==0.103.2",
    "httpx==0.25.0",
    "pyjwt==2.8.0",
    "python-dotenv==1.0.0",
    "sqlmodel==0.0.8",
    "uvicorn==0.23.2",
    "pydantic==1.10.13",
    "starlette==0.27.0",
    "pg8000==1.30.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
