[project]
name = "todo-backend"
version = "0.1.0"
description = "Multi-user Todo API backend (Pydantic v1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.99.1",
    "pydantic==1.10.13",
    "starlette==0.27.0",
    "uvicorn==0.23.2",
    "python-dotenv==1.0.0",
    "pyjwt==2.8.0",
    "bcrypt==4.0.1",
    "pg8000==1.30.3",
    "sqlalchemy==1.4.50",
    "sqlmodel==0.0.8",
    "httpx==0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
